feat(viewmodel+api): finalized TasksViewAPI & ViewModel (CRUD, state, filters, reporting, observer, commands, strategy) — next step: wire UI controls