@@ -1,85 +1,89 @@
 package taskmanagement.application.viewmodel.events;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 /**
- * A simple observable property holding a value of type T.
- * View listens to value changes raised by the ViewModel.
- * <p>Threading: callers are responsible to marshal to EDT when updating UI.</p>
- * @param <T> value type
+ * Minimal observable property (Observer pattern).
+ * View code can subscribe to value changes via {@link #addListener(Listener)}
+ * and react when {@link #setValue(Object)} updates the value.
+ *
+ * @param <T> value type (may be nullable)
  */
 public final class Property<T> {
 
-    /**
-     * Listener for property change events.
-     * @param <T> value type
-     */
+    /** Listener of value changes. */
     @FunctionalInterface
-    public interface ChangeListener<T> {
+    public interface Listener<T> {
         /**
-         * Invoked when the property's value changes.
-         * @param oldValue the previous value (may be null)
-         * @param newValue the new value (may be null)
+         * Called when the property's value changes.
+         *
+         * @param oldValue previous value (nullable)
+         * @param newValue new value (nullable)
          */
         void onChanged(T oldValue, T newValue);
     }
 
-    private final List<ChangeListener<T>> listeners = new ArrayList<>();
-    private T value;
+    private volatile T value;
+    private final List<Listener<T>> listeners = new ArrayList<>();
 
     /**
-     * Creates a property with an initial value (may be null).
-     * @param initial initial value
+     * Creates a property with an initial value.
+     *
+     * @param initial initial value (nullable)
      */
     public Property(T initial) {
         this.value = initial;
     }
 
-    /**
-     * @return current value (may be null)
-     */
-    public T get() {
+    /** Returns the current value (nullable). */
+    public T getValue() {
         return value;
     }
 
     /**
-     * Sets a new value and notifies listeners if changed (by equals).
-     * @param newValue new value (may be null)
+     * Sets a new value and notifies listeners if it actually changed
+     * (by {@link Objects#equals(Object, Object)}).
+     *
+     * @param newValue new value (nullable)
      */
-    public void set(T newValue) {
+    public void setValue(T newValue) {
         T old = this.value;
         if (!Objects.equals(old, newValue)) {
             this.value = newValue;
-            notifyListeners(old, newValue);
+            fireChanged(old, newValue);
         }
     }
 
-    /**
-     * Adds a change listener (no duplicates).
-     * @param listener listener to add
-     */
-    public void addListener(ChangeListener<T> listener) {
-        if (listener == null) return;
-        if (!listeners.contains(listener)) {
-            listeners.add(listener);
+    /** Adds a listener; no-op if already added. */
+    public void addListener(Listener<T> l) {
+        Objects.requireNonNull(l, "listener must not be null");
+        if (!listeners.contains(l)) {
+            listeners.add(l);
         }
     }
 
-    /**
-     * Removes a change listener (no-op if not present).
-     * @param listener listener to remove
-     */
-    public void removeListener(ChangeListener<T> listener) {
-        listeners.remove(listener);
+    /** Removes a listener; no-op if not present. */
+    public void removeListener(Listener<T> l) {
+        listeners.remove(l);
     }
 
-    private void notifyListeners(T oldValue, T newValue) {
-        // Iterate over a snapshot to avoid ConcurrentModification on re-entrancy
-        List<ChangeListener<T>> snapshot = List.copyOf(listeners);
-        for (ChangeListener<T> l : snapshot) {
-            l.onChanged(oldValue, newValue);
+    /** Returns an unmodifiable snapshot of current listeners (debug/testing). */
+    public List<Listener<T>> getListeners() {
+        return Collections.unmodifiableList(listeners);
+    }
+
+    private void fireChanged(T oldValue, T newValue) {
+        // Iterate over a copy to avoid ConcurrentModification on re-entrant changes.
+        List<Listener<T>> copy = List.copyOf(listeners);
+        for (Listener<T> l : copy) {
+            try {
+                l.onChanged(oldValue, newValue);
+            } catch (RuntimeException ignored) {
+                // Listener exceptions must not break the chain.
+            }
         }
     }
 }
